# nodable

./: .clang-format  .gitconfig  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CMakeLists.txt  CODING-GUIDELINES.md  HOW-TO-BUILD.md  Nodable.sublime-project  Nodable.sublime-workspace  Node  Node.cpp  Node.h  README.md  generate_VS2019_Solution_LLVM.bat  generate_VisualStudio2019_Solution.bat  ignore  imgui.ini  main.cpp  makefile  rakefile  rakefile.common.rb  rakefile.config.rb  rakefile.tools.rb
libs/: CMakeLists.txt  README.md  libs-config.cmake
libs/SDL2/: sdl2-config.cmake
libs/gl3w/GL/: gl3w.gcda  gl3w.gcno
libs/lodepng/: lodepng.h
libs/rapidjson/: allocators.h  document.h  reader.h
libs/xxhash/: readme.md
nodable/: CMakeLists.txt
nodable/app/assets/: startup.txt
nodable/app/src/: main.cpp
nodable/conf/: Config.h.in
nodable/lib/: lib-config.cmake
nodable/lib/Component/: ApplicationView.cpp  Component.h  ComputeBase.h  ComputeFunction.cpp  FileView.cpp  FileView.h  GraphNodeView.cpp  GraphNodeView.h  History.h  NodeView.cpp  View.h  WireView.cpp
nodable/lib/Core/: Application.cpp  Application.h  File.cpp  File.h  Log.cpp  Member.cpp  Runner.h  System.h  Texture.h  Variant.h  Way.h
nodable/lib/Node/: AbstractCodeBlockNode.h  AbstractNodeFactory.h  CodeBlockNode.cpp  CodeBlockNode.h  DefaultNodeFactory.h  GraphNode.cpp  GraphNode.h  InstructionNode.cpp  InstructionNode.h  Node.h  ScopedCodeBlockNode.cpp
projects/framework/core/: CMakeLists.txt
projects/framework/gui/: CMakeLists.txt
projects/framework/gui-example/: CMakeLists.txt
projects/nodable/app/: CMakeLists.txt
projects/nodable/cli/: CMakeLists.txt
projects/nodable/core/: CMakeLists.txt
projects/nodable/gui/: CMakeLists.txt
projects/tests/: CMakeLists.txt
projects/tests/src/: main.cpp  main_benchmark.cpp  main_tests.cpp
src/: CMakeLists.txt  README.md
src/app/: CMakeLists.txt
src/app/scripts/: nodable.bat
src/app/src/: App.cpp  AppContext.cpp  AppNodeFactory.cpp  AppView.cpp  Application.cpp  Application.h  ApplicationView.cpp  ApplicationView.h  BindedEventManager.cpp  Event.cpp  File.cpp  File.h  FileView.cpp  FileView.h  GraphNodeView.cpp  GraphNodeView.h  History.cpp  History.h  ImGuiEx.cpp  MemberConnector.cpp  MemberView.cpp  NodeConnector.cpp  NodeFactory.cpp  NodeFactory.h  NodeView.cpp  NodeView.h  NodeViewConstraint.cpp  PropertyConnector.cpp  PropertyView.cpp  Settings.cpp  Settings.h  Shortcut.cpp  View.cpp  View.h  ViewConstraint.cpp  WireView.cpp  WireView.h  main.cpp
src/cli/: CMakeLists.txt
src/cli/src/: CLI.cpp  main.cpp
src/conf/: Config.h.in  build_info.h.in
src/core/: CMakeLists.txt
src/core/src/: AbstractCodeBlockNode.cpp  AbstractCodeBlockNode.h  AbstractNodeFactory.h  AbstractScope.cpp  Assembly.cpp  CodeBlockNode.cpp  CodeBlockNode.h  Compiler.cpp  Component.cpp  Component.h  ComputeBase.h  ComputeBinaryOperation.h  ComputeFunction.cpp  ComputeFunction.h  ComputeUnaryOperation.h  ConditionalStructNode.cpp  ConditionalStructNode.h  DataAccess.cpp  DataAccess.h  DirectedEdge.cpp  ForLoopNode.cpp  Format.cpp  FuncSig.cpp  Function.cpp  Function.h  FunctionSignature.cpp  GraphNode.cpp  GraphNode.h  GraphTraversal.cpp  GraphTraversal.h  HeadlessNodeFactory.cpp  HeadlessNodeFactory.h  IConditionalStruct.cpp  IScope.cpp  InstructionNode.cpp  InstructionNode.h  InvokableComponent.cpp  Language.cpp  Language.h  LanguageFactory.cpp  (+60 more)
src/framework/headless/: CMakeLists.txt
src/framework/imgui/: CMakeLists.txt
src/fw/core/: Box2D.h  CMakeLists.txt  Color.h  Pool.bench.cpp  Pool.cpp  Pool.h  Pool.inl  Pool.specs.cpp  Rect.h  TIdentifier.h  Vec2.h  Vec4.h  XForm2D.h  algorithm.h  async.cpp  async.h  benchmark.cpp  format.cpp  format.h  hash.h  log.cpp  log.h  math.h  memory.cpp  string.bench.cpp  string.h  system.cpp  system.h  tests.cpp  types.h
src/fw/gui/: Action.cpp  Action.h  ActionManager.cpp  ActionManager.h  ActionManagerView.cpp  ActionManagerView.h  App.cpp  App.h  AppView.cpp  AppView.h  CMakeLists.txt  Config.cpp  Config.h  Event.h  EventManager.cpp  EventManager.h  FontManager.cpp  FontManager.h  FontManagerConfig.h  ImGuiEx.cpp  ImGuiEx.h  ImGuiExConfig.h  Texture.h  TextureManager.cpp  TextureManager.h  View.cpp  View.h  gui.cpp  gui.h
src/fw/gui-example/: AppExample.h  AppExampleView.h  CMakeLists.txt  main.cpp
src/ndbl/: README.md
src/ndbl/app/: main.cpp
src/ndbl/cli/: CLI.cpp  CLI.h  main.cpp
src/ndbl/core/: ASTCompiler.cpp  ASTCompiler.h  ASTComponentFactory.cpp  ASTComponentFactory.h  ASTConditionalNode.cpp  ASTConditionalNode.h  ASTConditionalT.h  ASTForLoop.cpp  ASTForLoop.h  ASTForLoopNode.cpp  ASTForLoopNode.h  ASTFunctionCall.cpp  ASTFunctionCall.h  ASTFunctionNode.cpp  ASTFunctionNode.h  ASTGraph.cpp  ASTGraph.h  ASTGraph.specs.cpp  ASTIf.cpp  ASTIf.h  ASTLiteral.cpp  ASTLiteral.h  ASTLiteralNode.cpp  ASTLiteralNode.h  ASTNode.cpp  ASTNode.h  ASTNode.specs.cpp  ASTNodeComponent.cpp  ASTNodeComponent.h  ASTNodeFactory.cpp  ASTNodeFactory.h  ASTNodeProperty.cpp  ASTNodeProperty.h  ASTNodePropertyBag.cpp  ASTNodePropertyBag.h  ASTNodeSlot.cpp  ASTNodeSlot.h  ASTNodeSlot.specs.cpp  ASTNodeSlotFlag.h  ASTNodeType.h  (+121 more)
src/ndbl/gui/: ASTNodePropertyView.cpp  ASTNodePropertyView.h  ASTNodeSlotView.cpp  ASTNodeSlotView.h  ASTNodeView.cpp  ASTNodeView.h  ASTNodeViewContextualMenu.cpp  ASTNodeViewContextualMenu.h  ASTScopeView.cpp  ASTScopeView.h  Action.h  BoxShapeComponent.h  Condition.h  Config.cpp  Config.h  CreateNodeCtxMenu.cpp  CreateNodeCtxMenu.h  Event.h  File.cpp  File.h  FileView.cpp  FileView.h  GraphView.cpp  GraphView.h  GraphViewTool.cpp  GraphViewTool.h  History.cpp  History.h  Isolation.h  Nodable.cpp  Nodable.h  Nodable.specs.cpp  NodableView.cpp  NodableView.h  NodeView.cpp  NodeView.h  NodeViewConstraint.cpp  NodeViewConstraint.h  (+20 more)
src/nodable/: README.md
src/tests/: CMakeLists.txt
src/tools/: README.md
tests/: CMakeLists.txt  Test_GraphNode.cpp  Test_Member.cpp  Test_Node.cpp  Test_Parser.cpp  Test_WireAndNodes.cpp  main.cpp
tests/src/: main.cpp  nodable_fixture.h  test_tools.h  tools.h
(+1975 files in other folders)
